made changes to solution for start up

--- a/TeamSoccer/Soccer.csproj
+++ b/TeamSoccer/Soccer.csproj
@@ -217,6 +217,8 @@
           <DevelopmentServerPort>16901</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>http://localhost:16901/</IISUrl>
+          <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
+          <IISAppRootUrl>http://localhost:16901/</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
