added players for selected teams

--- a/AccaBetApi/Web.config
+++ b/AccaBetApi/Web.config
@@ -17,7 +17,7 @@
   </appSettings>
     <connectionStrings>
 
-    <add name="S00141500" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;          AttachDbFilename=|DataDirectory|\S00141500.mdf;          Initial Catalog=API-S00141500;          Integrated Security=True;          MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="SoccerAppDB" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;          AttachDbFilename=|DataDirectory|\SoccerAppDB.mdf;          Initial Catalog=API-S00141500;          Integrated Security=True;          MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
