--- a/AccaBetApi/SoccerApi.csproj
+++ b/AccaBetApi/SoccerApi.csproj
@@ -200,6 +200,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201609011035348_ init.cs" />
+    <Compile Include="Migrations\201609011035348_ init.Designer.cs">
+      <DependentUpon>201609011035348_ init.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AppContext.cs" />
     <Compile Include="Models\Country.cs" />
@@ -225,6 +229,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201609011035348_ init.resx">
+      <DependentUpon>201609011035348_ init.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
